force-app/main/default/objects/Salle__c/Salle__c.object-meta.xml
<CustomObject>
    <label>Salle</label>
    <nameField>
        <label>Salle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>