force-app/main/default/objects/Salle__c/fields/AccessibilitePMR__c.field-meta.xml
<CustomField>
    <fullName>AccessibilitePMR__c</fullName>
    <label>Accessibilité PMR</label>
    <length>150</length>
    <type>Text</type>
</CustomField>