force-app/main/default/objects/Salle__c/fields/Complexe__c.field-meta.xml
<CustomField>
    <fullName>Complexe__c</fullName>
    <label>Complexe</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Salles</relationshipLabel>
    <relationshipName>Salles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>