force-app/main/default/objects/Salle__c/fields/DirectSatellite__c.field-meta.xml
<CustomField>
    <fullName>DirectSatellite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Salle équipée pour les retransmissions d&#39;émissions en direct et par satellite</inlineHelpText>
    <label>Retransmission Direct Satellite</label>
    <type>Checkbox</type>
</CustomField>