force-app/main/default/objects/Salle__c/fields/EquipementDolby__c.field-meta.xml
<CustomField>
    <fullName>EquipementDolby__c</fullName>
    <label>Equipement Son DOLBY</label>
    <length>20</length>
    <type>Text</type>
</CustomField>