force-app/main/default/objects/Salle__c/fields/EquipementNumerique__c.field-meta.xml
<CustomField>
    <fullName>EquipementNumerique__c</fullName>
    <label>Equipement Son Numérique</label>
    <length>20</length>
    <type>Text</type>
</CustomField>