force-app/main/default/objects/Salle__c/fields/Espacement__c.field-meta.xml
<CustomField>
    <fullName>Espacement__c</fullName>
    <inlineHelpText>Espacement entre les rangées</inlineHelpText>
    <label>Espacement</label>
    <length>15</length>
    <type>Text</type>
</CustomField>