force-app/main/default/objects/Salle__c/fields/Fauteuils__c.field-meta.xml
<CustomField>
    <fullName>Fauteuils__c</fullName>
    <inlineHelpText>Nombre de fauteuils de la salle</inlineHelpText>
    <label>Fauteuils</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>