force-app/main/default/objects/Salle__c/fields/HauteurEcran__c.field-meta.xml
<CustomField>
    <fullName>HauteurEcran__c</fullName>
    <label>Hauteur de l&#39;Ecran</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>