force-app/main/default/objects/Salle__c/fields/HFR__c.field-meta.xml
<CustomField>
    <fullName>HFR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Projection haute fréquence (48i/s ou plus)</inlineHelpText>
    <label>HFR</label>
    <type>Checkbox</type>
</CustomField>