force-app/main/default/objects/Salle__c/fields/LargeurEcran__c.field-meta.xml
<CustomField>
    <fullName>LargeurEcran__c</fullName>
    <label>Largeur de l&#39;Ecran</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>