force-app/main/default/objects/Salle__c/fields/Lunettes__c.field-meta.xml
<CustomField>
    <fullName>Lunettes__c</fullName>
    <label>Lunettes 3D</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Volfoni</fullName>
            </value>
            <value>
                <fullName>Passive RealD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>