force-app/main/default/objects/Salle__c/fields/Malentendants__c.field-meta.xml
<CustomField>
    <fullName>Malentendants__c</fullName>
    <inlineHelpText>Salle équipée d&#39;un émetteur permettant à la personne d&#39;entendre dans son appareil auditif à la position T, le son du film. Le spectateur demandera un récepteur à la caisse.</inlineHelpText>
    <label>Malentendants</label>
    <length>15</length>
    <type>Text</type>
</CustomField>