force-app/main/default/objects/Salle__c/fields/NumSalle__c.field-meta.xml
<CustomField>
    <fullName>NumSalle__c</fullName>
    <label>Numéro de la salle</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>