force-app/main/default/objects/Salle__c/fields/PMR__c.field-meta.xml
<CustomField>
    <fullName>PMR__c</fullName>
    <inlineHelpText>Emplacements pour Personnes à Mobilité Réduite</inlineHelpText>
    <label>PMR</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>