force-app/main/default/objects/Salle__c/fields/Prestige__c.field-meta.xml
<CustomField>
    <fullName>Prestige__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salle Prestige</label>
    <type>Checkbox</type>
</CustomField>