force-app/main/default/objects/Salle__c/fields/Projecteur__c.field-meta.xml
<CustomField>
    <fullName>Projecteur__c</fullName>
    <label>Marque Projecteur Numérique</label>
    <length>40</length>
    <type>Text</type>
</CustomField>