force-app/main/default/objects/Salle__c/fields/Tech_CodeSalle__c.field-meta.xml
<CustomField>
    <fullName>Tech_CodeSalle__c</fullName>
    <externalId>true</externalId>
    <label>Tech_CodeSalle</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>