force-app/main/default/objects/Salle__c/fields/X4K__c.field-meta.xml
<CustomField>
    <fullName>X4K__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4K</label>
    <type>Checkbox</type>
</CustomField>